--- a/vcweb/experiment/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/experiment/lighterprints/templates/lighterprints/participate.html
@@ -515,7 +515,8 @@ $(function() {
                 viewModel.initializeChart();
             }
             else {
-                Raven.captureMessage("Unable to perform activity: " + formData);
+                // FIXME: replace with Sentry JS sdk https://docs.sentry.io/platforms/javascript/
+                // Raven.captureMessage("Unable to perform activity: " + formData);
                 $('#activityPerformedModal').modal('hide');
                 viewModel.errorMessage(data.response);
                 $('#activityUnavailableModal').modal();
